# chatting_study

./: README.md  setup.cfg
src/addressbook_choeuhyeon.egg-info/: PKG-INFO  SOURCES.txt
src/chat/: __main__.py  client.py  server.py
src/chat_choeuhyeon.egg-info/: PKG-INFO  SOURCES.txt
