[metadata]
name = chat-choeuhyeon
version = 0.0.2
author = choeuhyeon
author_email = choeuhyeon643@gmail.com
description = Education material "simple chat program"
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
[options.packages.find]
where = src